put the final details to the main and footers seccion, colors in background, icons and ancords

--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,12 @@ body{
     justify-content: center;
     align-items: center;
     position: relative;
-    color: black;
+    
 }
 
 .header .nav a{
     margin-left: 1rem;
+    color: black;
 }
 
 .header .nav .app{
@@ -50,50 +51,110 @@ main{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: .5rem;
+    gap: 2rem;
+    height: 100vh;
+    max-width: 100vw;
 }
 
-.title-container{
-    margin-top: 2rem;
-    display: flex;
-    font-size: 3rem;
+.logo-container{
+ max-width: 400px;
 }
 
-.title-container h1:nth-child(1){
-    color: #4285F4;
-}
-
-.title-container h1:nth-child(2){
-    color: #EA4335;
-}
-
-.title-container h1:nth-child(3){
-   color: #FBBC04;
-}
-
-.title-container h1:nth-child(4){
-    color:#4285F4 ;
-}
-
-.title-container h1:nth-child(5){
-    color: #34A853;
-}
-
-.title-container h1:nth-child(6){
-    color: #EA4335 ;
+.logo-container img{
+    width: 100%;
 }
 
 .input-container{
    text-align: center;
     position: relative;
-    width: 100%;
+    width: 40rem;
 }
 
 .input-container input{
-    width: 50%;
+    width: 100%;
     border-radius: 30px;
     padding: 15px;
-    border: unset;
+    border: 1px solid rgba(128, 128, 128, 0.329);
+    
+    text-align: center;
+}
+
+input:hover{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.input-container i{
+    position: absolute;
+}
+
+.input-container i:nth-child(2){
+    top: 1rem;
+    left: 1rem;
+    font-size: 1.2rem;
+}
+
+.input-container i:nth-child(3){
+    top: 1rem;
+    right: 1.5rem;
+    font-size: 1.2rem;
+    color: #EA4335;
+}
+
+.input-container i:nth-child(4){
+    top: 1rem;
+    right: 0;
+    font-size: 1.2rem;
+    color:#4285F4;
+}
+
+.tex-container{
+
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.tex-container a{
+    background-color: #ebebeb81;
+    padding: .5rem 1rem;
+    color: black;
+}
+
+.tex-container a:hover{
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.ftr-one{
+    width: 100%;
+    height: 3rem;
+    background:#ebebeb81 ;
+    padding: 0 1rem;
+    display: flex;
+    align-items: center;
+}
+
+.ftr-two{
+    width: 100%;
+    height: 3rem;
+    background:#ebebeb81 ;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-top: 1px solid rgba(0, 0, 0, 0.103);
+}
+
+
+.ftr-two .txt-cont1 a{
+    margin-left: 1rem;
+    color: black;
+}
+
+
+.ftr-two .txt-cont2 a{
+    margin-left: 1rem;
+    color: black;
+}
+
+
 
