--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,9 @@ main{
 .input-container input{
     width: 100%;
     border-radius: 30px;
-    padding: 15px;
+    padding: 1rem 2.5rem;
     border: 1px solid rgba(128, 128, 128, 0.329);
     
-    text-align: center;
 }
 
 input:hover{
@@ -95,14 +94,14 @@ input:hover{
 
 .input-container i:nth-child(3){
     top: 1rem;
-    right: 1.5rem;
+    right: -2rem;
     font-size: 1.2rem;
     color: #EA4335;
 }
 
 .input-container i:nth-child(4){
     top: 1rem;
-    right: 0;
+    right: -4rem;
     font-size: 1.2rem;
     color:#4285F4;
 }
